# LatticeBoltzmannMethod

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bench/: CMakeLists.txt  ParallelFor.cpp
cmake/: compiler_flags.cmake
examples/: CMakeLists.txt  Channel.cpp  Conversion.cpp  Couette.cpp  main.cpp
src/: Container.hpp  Conversion.hpp  ForEach.hpp  IO.hpp  IotaIter.hpp  Lattice.hpp  Macros.hpp  Monitor.hpp  StdparOpenMP.hpp  Utility.hpp  VTKWriter.hpp  XDMFWriter.hpp
